src/assets/style/pages/home/cmps/_stay-map.scss
.stay-map-listings {
    top: 178px;
    position: fixed;
    width: 100%;
    height: calc(100vh - 178px);
    z-index: 4;

    .map-marker {
        background: white;
        width: 60px;
        height: 24px;
        display: flex;
        justify-content: center;
        align-items: center;
        font-weight: 600;
        border-radius: 28px;
        font-size: 16px;
        box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px 0px;
        border: 1px solid rgba(223, 223, 223, 0.692);
        transition: transform 0.3s ease;

        &:hover {
            border-color: rgba(0, 0, 0, 0.08);
            box-shadow: 0 0 0 1px transparent, 0 0 0 4px transparent, 0 6px 16px rgba(0, 0, 0, 0.12);
            transform: scale(1.08);
        }
    }
}

